--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,21 @@
   </head>
 
   <body>
+    <nav>
+      <%= link_to 'Home', root_path %>
+        <% if @current_user.present? %>
+      
+           <%= link_to "New Photo", new_photo_path %>
+           <%= link_to "All users", users_path %>
+           <%= link_to "All photos", photos_path %>
+           <%= link_to "My Account", user_path(@current_user.id) %>
+           <%= link_to "Log out #{@current_user.email} ", login_path, :method => 'delete' %>
+
+        <% else %>
+          <%= link_to 'Sign up', new_user_path %>
+          <%= link_to 'Login', login_path %>
+       <% end %>
+    </nav>
     <%= yield %>
   </body>
 </html>
