--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -1,1 +1,13 @@
 <h1>Edit Photo</h1>
+
+<%= form_for @photo do |f| %>
+
+<%= f.label :image %>
+<%= f.text_field :image, :placeholder => 'http....', :required => true%>
+
+<%= f.label :description %>
+<%= f.text_field :description %>
+
+
+<%= f.submit 'Update photo'%>
+<% end %>
