--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -13,7 +13,8 @@
 <% @photo.comments.each do |comment| %>
   <p><%= comment.user.name %>: <%= comment.content %>  </p>
   <div class="controls">
-   <%= link_to "Edit comment", edit_photo_comment_path(comment.id) %>
+
+   <%= link_to "Edit comment", edit_photo_comment_path(@photo.id, comment.id ) %>
    <%= link_to "Delete comment", [comment.photo, comment], :method => 'delete' %>
 
   </div>
