--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -13,5 +13,5 @@
 <%= label_tag :password %>
 <%= password_field_tag :password %>
 
-<%= submit_tag "Sign in" %>
+<%= submit_tag "Sign in", :class=>"btn btn-primary" %>
 <% end %>
