--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,5 +1,21 @@
 body {
-  background-color: #ccd;
+  font-family: 'Noto Sans JP', sans-serif;
+
+
+}
+
+.container {
+    text-align: center;
+
+    background-color: pink;
+    margin: 0 auto;
+    width:100%;
+}
+
+nav {
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Lobster Two', cursive;
 }
 
 .thumb {
@@ -8,6 +24,17 @@ body {
 }
 
 .feature {
-  height: 30em;
-  width: 30em
+  height: 14em;
+  width: 14em
+}
+
+.comment_controls {
+  display:inline;
+}
+
+#title{
+ text-align: center;
+ color:black;
+ font-size: 65px;
+ font-family: 'Lobster Two', cursive;
 }
