--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,18 +8,27 @@
 </ol>
 <% end %>
 
+
 <%= form_for @user do |f| %>
+<div class="form-group">
   <%= f.label :name%>
-  <%= f.text_field :name, :required => true %>
+  <%= f.text_field :name, :required => true, :class => 'form-control' %>
+</div>
 
+<div class="form-group">
   <%= f.label :email %>
-  <%= f.email_field :email, :autofocus => true, :required => true %>
+  <%= f.email_field :email, :autofocus => true, :required => true, :class => 'form-control' %>
+</div>
 
+<div class="form-group">
   <%= f.label :password %>
-  <%= f.password_field :password %>
+  <%= f.password_field :password, :class => 'form-control' %>
+</div>
 
+<div class="form-group">
   <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
+  <%= f.password_field :password_confirmation, :class => 'form-control' %>
+</div>
+  <%= f.submit "Sign up!", :class=>"btn btn-primary" %>
 
-  <%= f.submit "Sign up!" %>
 <% end %>
