--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -38,3 +38,19 @@ nav {
  font-size: 65px;
  font-family: 'Lobster Two', cursive;
 }
+
+.profile {
+  height: 2em;
+  width: 2em;
+  border-radius: 1em;
+}
+
+.comment-section{
+  text-align: left;
+}
+
+.user_below_photo{
+  margin-top: 0.5em;
+
+
+}
