--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,14 +9,30 @@
 <% end %>
 
 <%= form_for @user do |f| %>
-  <%= f.label :name%>
-  <%= f.text_field :name, :required => true %>
+<div class="form-group">
+  <%= f.label :Nickname%>
+  <%= f.text_field :name, :required => true, :class => 'form-control' %>
+</div>
 
+<div class="form-group">
+  <%= f.label :image%>
+  <%= f.text_field :image, :class => 'form-control', :placeholder => 'http....(optional)' %>
+</div>
+
+<div class="form-group">
+  <%= f.label :email %>
+  <%= f.email_field :email, :autofocus => true, :required => true, :class => 'form-control' %>
+</div>
+
+<div class="form-group">
   <%= f.label :password %>
-  <%= f.password_field :password %>
+  <%= f.password_field :password, :class => 'form-control' %>
+</div>
 
+<div class="form-group">
   <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
+  <%= f.password_field :password_confirmation, :class => 'form-control' %>
+</div>
+  <%= f.submit "Sign up!", :class=>"btn btn-primary" %>
 
-  <%= f.submit "Update" %>
 <% end %>
