--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,8 +11,13 @@
 
 <%= form_for @user do |f| %>
 <div class="form-group">
-  <%= f.label :name%>
+  <%= f.label :Nickname%>
   <%= f.text_field :name, :required => true, :class => 'form-control' %>
+</div>
+
+<div class="form-group">
+  <%= f.label :image%>
+  <%= f.text_field :image, :class => 'form-control', :placeholder => 'http....(optional)' %>
 </div>
 
 <div class="form-group">
