--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
-<h1><%= @user.name %></h1>
+<h1>
+  <%= image_tag @user.image, :class => 'profile', :alt => @user.name %><%= @user.name %>
+</h1>
 
 <% if @current_user.present? && session[:user_id] == @user.id %>
   <div class="controls">
