--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,30 +9,24 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-    @import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&display=swap');
-    </style>
-    <style>
-       @import url('https://fonts.googleapis.com/css2?family=Lobster+Two:wght@700&display=swap');
-    </style>
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
-    </style>
+  @import url('https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap');
+  </style>
   </head>
 
   <body>
     <div class="container">
     <nav>
-      <%= link_to 'Home', root_path %>
+
         <% if @current_user.present? %>
-
-           <%= link_to "New Photo", new_photo_path %>
-           <%= link_to "All users", users_path %>
-           <%= link_to "All photos", photos_path %>
-           <%= link_to "My Account", user_path(@current_user.id) %>
-           <%= link_to "Log out #{@current_user.email} ", login_path, :method => 'delete' %>
-
+          <%= link_to (image_tag 'home.png', :class => 'nav_image'), root_path %>
+           <%= link_to (image_tag 'users.png', :class => 'nav_image'), users_path %>
+            <%= link_to (image_tag 'new.png', :class => 'nav_new'), new_photo_path %>
+           <%= link_to (image_tag 'account.png', :class => 'nav_image'), user_path(@current_user.id) %>
+           <%= link_to (image_tag 'logout.png', :class => 'nav_image'), login_path, :method => 'delete' %>
+      
         <% else %>
           <%= link_to 'Sign up', new_user_path %>
+          |
           <%= link_to 'Login', login_path %>
        <% end %>
     </nav>
