--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,21 +1,34 @@
 body {
-  font-family: 'Noto Sans JP', sans-serif;
-
-
+background-color: #1ac6ff;
 }
 
 .container {
-    text-align: center;
+    background-image: url(bg.png);
+    background-size:cover;
 
-    background-color: pink;
+    text-align: center;
+    padding-top: 2em;
+    background-color: white;
     margin: 0 auto;
     width:100%;
+    height: 100%;
 }
 
 nav {
   text-align: center;
   font-size: 20px;
-  font-family: 'Lobster Two', cursive;
+  color:Black;
+}
+
+
+.nav_image {
+  height:2em;
+  width:2em;
+}
+
+.nav_new {
+  height:4em;
+  width:4em;
 }
 
 .thumb {
@@ -36,7 +49,14 @@ nav {
  text-align: center;
  color:black;
  font-size: 65px;
- font-family: 'Lobster Two', cursive;
+ font-family: 'Grand Hotel', cursive;
+}
+
+.by{
+ text-align: center;
+ color:black;
+ font-size: 25px;
+ font-family: 'Grand Hotel', cursive;
 }
 
 .profile {
@@ -45,12 +65,20 @@ nav {
   border-radius: 1em;
 }
 
+.profile_s {
+  height: 1em;
+  width: 1em;
+  border-radius: 0.5em;
+}
+
 .comment-section{
   text-align: left;
 }
 
 .user_below_photo{
   margin-top: 0.5em;
+}
 
-
+nav a {
+  padding:10px 5px;
 }
