--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,11 +3,9 @@
 
 
 <% if @current_user.present? %>
-  <p>
-     Welcome back <%= @current_user.name%>
-  </p>
+
 <% end %>
 
 <% @photos.each do |photo| %>
-<%= link_to image_tag(photo.image, :class => 'feature'), photo %>
+<%= link_to cl_image_tag(photo.image, :class => 'feature'), photo %>
 <% end %>
