--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -1,9 +1,9 @@
  <h1>Edit Photo</h1>
 
-<%= form_for @photo do |f| %>
+<%= form_for(@photo, :html => {:multipart => true}) do |f| %>
 
 <%= f.label :image %>
-<%= f.text_field :image, :placeholder => 'http....', :required => true%>
+<%= f.cl_image_upload :image, :required => true%>
 
 <%= f.label :description %>
 <%= f.text_field :description %>
