--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,4 +1,4 @@
 <% @photos.each do |photo| %>
-<%= link_to image_tag(photo.image, :class => 'feature'), photo %>
+<%= link_to cl_image_tag(photo.image, :class => 'feature'), photo %>
 
 <% end %>
