--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -7,11 +7,16 @@
 <% end %>
 
 <%= form_tag login_path do %>
-<%= label_tag :email %>
-<%= email_field_tag :email %>
 
+<div class="form-grouop">
+  <%= label_tag :email %>
+  <%= email_field_tag :email, nil, :class=> 'form-control' %>
+</div>
+
+<div class="form-grouop">
 <%= label_tag :password %>
-<%= password_field_tag :password %>
+<%= password_field_tag :password, nil, :class=> 'form-control' %>
+</div>
 
 <%= submit_tag "Sign in", :class=>"btn btn-primary" %>
 <% end %>
