--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,8 +8,8 @@
 </ol>
 <% end %>
 
-
-<%= form_for @user do |f| %>
+<div class="container-Sign_up">
+<%= form_for(@user, :html => {:multipart => true}) do |f| %>
 <div class="form-group">
   <%= f.label :Nickname%>
   <%= f.text_field :name, :required => true, :class => 'form-control' %>
@@ -17,7 +17,7 @@
 
 <div class="form-group">
   <%= f.label :image%>
-  <%= f.text_field :image, :class => 'form-control', :placeholder => 'http....(optional)' %>
+  <%= f.cl_image_upload :image, :class => 'form-control' %>
 </div>
 
 <div class="form-group">
@@ -37,3 +37,4 @@
   <%= f.submit "Sign up!", :class=>"btn btn-primary" %>
 
 <% end %>
+</div>
