--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  <%= image_tag @user.image, :class => 'profile', :alt => @user.name %><%= @user.name %>
+  <%= cl_image_tag @user.image, :class => 'profile', :alt => @user.name %><%= @user.name %>
 </h1>
 
 <% if @current_user.present? && session[:user_id] == @user.id %>
@@ -10,5 +10,5 @@
 <% end %>
 
 <% @user.photos.each do |photo| %>
-<%= link_to image_tag(photo.image, :class => 'thumb'), photo %>
+<%= link_to cl_image_tag(photo.image, :class => 'thumb'), photo %>
 <% end %>
