--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,18 +1,11 @@
 body {
-background-color: #1ac6ff;
+background-color: #00ccff;
+height:100%;
+width:100%;
+color:black;
 }
 
-.container {
-    background-image: url(bg.png);
-    background-size:cover;
 
-    text-align: center;
-    padding-top: 2em;
-    background-color: white;
-    margin: 0 auto;
-    width:100%;
-    height: 100%;
-}
 
 nav {
   text-align: center;
@@ -32,18 +25,17 @@ nav {
 }
 
 .thumb {
-  height: 12em;
-  width: 12em
+  height: 10em;
+  width: 10em
 }
 
 .feature {
   height: 35em;
-  width: 35em
+  width: 35em;
+  max-width: 80%;
 }
 
-.comment_controls {
-  display:inline;
-}
+
 
 #title{
  text-align: center;
@@ -72,7 +64,11 @@ nav {
 }
 
 .comment-section{
-  text-align: left;
+  width: 35em;
+  text-align:left;
+  margin:0 auto;
+  max-width: 80%;
+
 }
 
 .user_below_photo{
@@ -80,5 +76,138 @@ nav {
 }
 
 nav a {
-  padding:10px 5px;
+  padding:10px 20px;
 }
+
+.container {
+
+  text-align: center;
+  width:70%;
+  height:100%;
+  background-color: white;
+}
+
+.content_container {
+
+    background-color: pink;
+    text-align: center;
+    padding-top: 2em;
+    background-color: white;
+    margin: 0 auto;
+    width:100%;
+    height: 100%;
+}
+
+.photo_home {
+  width:30em;
+  height:35em;
+  max-width: 100%;
+
+}
+
+.container_home {
+  margin-top: 2em;
+  margin-bottom: 2em;
+
+}
+
+.home_top {
+  padding-top: 0.6em;
+  padding-left: 5px;
+  margin:0 auto;
+  width:30em;
+  height:3em;
+
+  border-left: (solid 1px #999999);
+  border-right: (solid 1px #999999);
+  border-top: (solid 1px #999999);
+  text-align: left;
+  max-width: 100%;
+}
+
+.home_bottom {
+  padding-top: 0.1em;
+  padding-left: 5px;
+  margin:0 auto;
+  width:30em;
+  height:3em;
+  border-left: (solid 1px #999999);
+  border-right: (solid 1px #999999);
+  border-bottom: (solid 1px #999999);
+  text-align: left;
+  max-width: 100%;
+
+}
+
+.photo_show_controls{
+  width: 35em;
+  max-width: 80%;
+  margin:0 auto;
+  text-align: right;
+  border-left: (solid 1px #999999);
+  border-right: (solid 1px #999999);
+  padding-right: 2px;
+}
+
+.user_below_photo{
+  padding-top: 0.2em;
+  margin:0 auto;
+  width:35em;
+  height:3em;
+  border-left: (solid 1px #999999);
+  border-right: (solid 1px #999999);
+  border-bottom: (solid 1px #999999);
+  text-align: left;
+  padding-left: 2px;
+  max-width: 80%
+}
+
+.btn {
+  margin-top: 4px;
+  margin-bottom:100%
+}
+
+.bottom-space{
+  height: 100%;
+}
+
+.bottom-space-user{
+  height:25em;
+}
+
+.form-control-lg{
+  width:50%;
+  height:5em;
+}
+
+.edit-comment{
+  text-align: left;
+}
+
+.form-File{
+      width: 100%;
+      height:0.1em;
+      background-color: pink;
+      color: #495057;
+      background-color: #fff;
+      border: 1px solid #ced4da;
+      border-radius: 0.25rem;
+      padding-bottom: 5em;
+  }
+
+  .user-show {
+    margin-top: 1em;
+  }
+
+  .user-show-controls {
+    margin-bottom: 1em;
+  }
+
+  .user-index{
+    text-align:left;
+    margin-top: 1.5em;
+  }
+
+  .photo-show{
+    margin-top: 2em;
+  }
