--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,6 +1,6 @@
 <%=form_for([@photo, @photo.comments.build]) do |f| %>
 
-<%= f.label :Comment %>
-<%= f.text_field :content %>
-<%= f.submit %>
+
+<%= f.text_field :content, :class =>"form-control form-control-lg"  %>
+<%= f.submit 'comment', :class=>"btn btn-outline-primary"%>
 <% end %>
