--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -18,5 +18,5 @@
 <%= password_field_tag :password, nil, :class=> 'form-control' %>
 </div>
 
-<%= submit_tag "Sign in", :class=>"btn btn-primary" %>
+<%= submit_tag "Sign in", :class=>"btn btn-outline-primary" %>
 <% end %>
