--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -15,11 +15,6 @@
 </div>
 
 <div class="form-group">
-  <%= f.label :image%>
-  <%= f.cl_image_upload :image, :class => 'form-control' %>
-</div>
-
-<div class="form-group">
   <%= f.label :email %>
   <%= f.email_field :email, :autofocus => true, :required => true, :class => 'form-control' %>
 </div>
@@ -27,6 +22,13 @@
 <div class="form-group">
   <%= f.label :password %>
   <%= f.password_field :password, :class => 'form-control' %>
+</div>
+
+<div class="mb-3">
+  <%= f.label :image, :class => "form-label"%>
+  <div class="form-File">
+    <br><%= f.cl_image_upload :image %>
+  </div>
 </div>
 
 <%= f.submit "Save", :class=>"btn btn-primary" %>
