--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,12 @@
 <h1>All Users</h1>
 <% @users.each do |user| %>
-  <p>
-      <%= cl_image_tag user.image, :class => 'profile', :alt => user.name %> <%= link_to user.name, user %>
-  </p>
+  <div class="user-index">
+     <p>
+         <%= cl_image_tag user.image, :class => 'profile', :alt => user.name %> <%= link_to user.name, user %>
+     </p>
 
-    <% user.photos.each do |photo| %>
-    <%= link_to cl_image_tag(photo.image, :class => 'thumb'), photo %>
-    <% end %>
+        <% user.photos.each do |photo| %>
+        <%= link_to cl_image_tag(photo.image, :class => 'thumb'), photo %>
+        <% end %>
+  </div>
 <% end %>
