--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,11 +16,6 @@
 </div>
 
 <div class="form-group">
-  <%= f.label :image%>
-  <%= f.cl_image_upload :image, :class => 'form-control' %>
-</div>
-
-<div class="form-group">
   <%= f.label :email %>
   <%= f.email_field :email, :autofocus => true, :required => true, :class => 'form-control' %>
 </div>
@@ -34,7 +29,14 @@
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation, :class => 'form-control' %>
 </div>
-  <%= f.submit "Sign up!", :class=>"btn btn-primary" %>
+
+<div class="mb-3">
+  <%= f.label :image, :class => "form-label"%>
+  <div class="form-File">
+    <br><%= f.cl_image_upload :image %>
+  </div>
+</div>
+  <%= f.submit "Sign up!", :class=>"btn btn-outline-primary" %>
 
 <% end %>
 </div>
